# jupedsim

./: .all-contributorsrc  .clang-format  .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .project  .readthedocs.yaml  .travis.yml  .travis_before_install.bash  .travis_before_script.bash  .travis_install.bash  .zenodo.json  0.8_ini-Bottleneck.xml  0.9_ini-Bottleneck.xml  1.0_ini-Bottleneck.xml  1.1_ini-Bottleneck.xml  1.2_ini-Bottleneck.xml  1.4_ini-Bottleneck.xml  1.6_ini-Bottleneck.xml  1.8_ini-Bottleneck.xml  2.0_ini-Bottleneck.xml  AUTHORS  Analysis.cpp  Analysis.h  CHANGELOG  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  CTestConfig.cmake  DESIGN.md  DEVELOPMENT.md  DISCLAIMER  Dockerfile  (+81 more)
jps-ui/: CMakeLists.txt
jps-ui/src/: aabb.cpp  aabb.hpp  disjoint_set.cpp  disjoint_set.hpp  gui.cpp  gui.hpp  main.cpp  mesh.cpp  mesh.hpp  ortho_camera.cpp  ortho_camera.hpp  rendering_mesh.cpp  rendering_mesh.hpp  routing_engine.cpp  routing_engine.hpp  shader.cpp  shader.hpp  wkt.cpp  wkt.hpp
jps-ui/test/: mesh_test.cpp
jps-ui/tests/: mesh_test.cpp
jpscore/: CMakeLists.txt
jpscore/forms/: DS_Store.scpt  JPScore.icns  jpscore.rc
jpscore/src/: main.cpp
jpsreport/: .travis_before_install.bash  AUTHORS  Analysis.cpp  Analysis.h  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  JPSreport.txt  Makefile.cmake  main.cpp
jpsreport/IO/: OutputHandler.cpp  OutputHandler.h
jpsreport/Utest/: testGetBasename.cpp  testGetFilename.cpp
jpsreport/demos/: HowTo.ipynb
jpsreport/forms/: JPSreport.icns  jpsreport.rc
jpsreport/general/: ArgumentParser.cpp  ArgumentParser.h  Macros.h
jpsreport/geometry/: Building.cpp  Building.h  Crossing.cpp  Crossing.h  Goal.cpp  Goal.h  Hline.cpp  Hline.h  Line.cpp  Line.h  NavLine.cpp  NavLine.h  Obstacle.cpp  Obstacle.h  Point.cpp  Point.h  Room.cpp  Room.h  SubRoom.cpp  SubRoom.h  Transition.cpp  Transition.h  Wall.cpp  Wall.h
jpsreport/methods/: ConfigData_D.h  ConfigData_DIJ.cpp  ConfigData_DIJ.h  MeasurementArea.h  Method_A.cpp  Method_A.h  Method_B.cpp  Method_B.h  Method_C.cpp  Method_C.h  Method_D.cpp  Method_D.h  Method_I.cpp  Method_I.h  Method_J.cpp  Method_J.h  PedData.cpp  PedData.h  VoronoiDiagram.cpp  VoronoiDiagram.h
jpsreport/scripts/: 2Dto1D_ID.py  SteadyState.py  _Plot_N_t.py  _Plot_profiles.py  _Plot_timeseries_rho_v.py  _getGait.py  correct_trajectories.py  plot_Nt.py  plot_geom.py  plot_profiles.py  plot_voronoi.py  runscript.py  txt2txt.py  txt2xml_lib.py  utilities.py
jpsreport/src/: Analysis.cpp  Analysis.h  ArgumentParser.cpp  ArgumentParser.h  BuildingOld.cpp  BuildingOld.h  constants.h  geometry_helper.cpp  geometry_helper.h  main.cpp
jpsreport/tinyxml/: tinyxmlparser.cpp
jpsreport/xsd/: jps_report.xsd
jpsvis/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  FindQT.cmake  Info.plist  JPSvis.pro  JPSvisSettings.xml  LICENSE  Makefile  Makefile.Debug  Makefile.Release  README.md  TraVisTo.pro  checkDependencies.py  deployAPPLE.sh  install_packages_debian.txt  object_script.TraVisTo.Debug  object_script.TraVisTo.Release
jpsvis/Resources/: Info.plist.in  dmg.json
jpsvis/benchmarks/: parsing.cpp
jpsvis/cmake/: deployapp.cmake.in  helper_functions.cmake  install_helper.cmake
jpsvis/cmake_modules/: FindVTK.cmake
jpsvis/forms/: Settings.cpp  Settings.h  icons.qrc  jpsvis.icns  jpsvis.rc  mainwindow.ui  settings.ui  travisto.rc  travisto.ui
jpsvis/scripts/: check-format-cpp  format-cpp  petrack2jpsvis.py
jpsvis/src/: ApplicationState.h  BuildInfo.cpp  BuildInfo.cpp.in  BuildInfo.h  CLI.cpp  CLI.h  CLI.hpp  Debug.cpp  Debug.h  Frame.cpp  Frame.h  Frame.hpp  FrameElement.cpp  FrameElement.h  InteractorStyle.cpp  InteractorStyle.h  InteractorStyle.hpp  Log.cpp  Log.h  Log.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  Message.h  Parsing.cpp  Parsing.h  Parsing.hpp  Pedestrian.cpp  Pedestrian.h  RenderMode.h  SaxParser.cpp  SaxParser.h  Settings.h  Settings.hpp  SimpleVisualisationWindow.cpp  SimpleVisualisationWindow.h  SyncData.cpp  SyncData.h  SystemSettings.cpp  SystemSettings.h  (+30 more)
libcore/: CMakeLists.txt  Simulation.cpp
libcore/IO/: OutputHandler.h
libcore/geometry/: Building.cpp  Building.h  Crossing.cpp  Crossing.h
libcore/math/: GCFMModel.h  (+1 more)
libcore2/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
libdistance/: CMakeLists.txt
libjps/: CMakeLists.txt
libjupedsim/: CMakeLists.txt  jupedsimConfig.cmake
libshared/: CMakeLists.txt  Logger.cpp  Logger.hpp  RandomToolset.cpp  RandomToolset.h
libsimulator/: CMakeLists.txt
python_bindings_jupedsim/: CMakeLists.txt  agent.cpp  anticipation_velocity_model.cpp  bindings_jupedsim.cpp  build_info.cpp  collision_free_speed_model.cpp  collision_free_speed_model_individual.cpp  collision_free_speed_model_v2.cpp  collision_free_speed_model_v3.cpp  conversion.cpp  conversion.hpp  environment_query.cpp  format.hpp  generalized_centrifugal_force_model.cpp  geometry.cpp  journey.cpp  linesegment.cpp  logging.cpp  logging.hpp  neighbor_query.cpp  neighborhood_search.cpp  python_model.cpp  python_model.hpp  python_model_data.hpp  python_model_update.hpp  python_routing_engine_proxy.hpp  routing.cpp  routing_3d.cpp  routing_factory.hpp  simulation.cpp  social_force_model.cpp  social_force_model_2lvlped.cpp  social_force_model_IPP.cpp  stage.cpp  trace.cpp  transition.cpp  type_casters.hpp  warp_driver_model.cpp  wrapper.hpp
systemtest/: CDFdistance.py  CMakeLists.txt  JPSRunTest.py  Run_Utests.py  Utests_ini.xml  fixtures.py  makeini.py  run_scenarios.py  test_comandline_args.py  test_desired_speed.py  test_dxf_parser.py  test_geometry_holes.py  test_hdf5_writer.py  test_jpscore.py  test_model_constraints.py  test_model_defaults.py  test_model_properties.py  test_perftests.py  test_py_jupedsim.py  test_python_social_force_model.py  test_routing.py  test_routing_kwargs.py  test_simulation_null_model.py  test_social_force_model_2lvlped.py  test_social_force_model_ipp.py  test_stages.py  test_warp_driver.py  utils.py
(+7505 files in other folders)
